[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -100.0
margin_right = -20.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.231373, 0.266667, 1 )
text = "10 / 10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerEnergy" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -170.0
margin_top = -130.0
margin_right = -20.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0156863, 0.517647, 0.819608, 1 )
text = "3/3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
margin_left = 520.0
margin_top = 190.0
margin_right = 620.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 2 )
text = "end_turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseEnemy" type="Label" parent="."]
visible = false
anchor_top = 0.732
anchor_right = 1.0
anchor_bottom = 0.799
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.94902, 0.431373, 0.431373, 1 )
text = "choose_enemy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Stage" type="Label" parent="."]
margin_left = 11.0
margin_top = 8.0
margin_right = 85.0
margin_bottom = 31.9998
custom_fonts/font = SubResource( 4 )
text = "Stage : 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.9004
margin_top = -110.119
margin_right = 64.9004
margin_bottom = -86.1192
custom_fonts/font = SubResource( 4 )
text = "deck"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discard" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 78.9004
margin_top = -110.119
margin_right = 151.9
margin_bottom = -86.1192
custom_fonts/font = SubResource( 4 )
text = "discard"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -149.0
margin_bottom = -115.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.819608, 0.2, 0.2, 1 )
text = "error_spreading"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sacrifice" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -98.0
margin_bottom = -70.0
custom_fonts/font = SubResource( 6 )
text = "sacrifice"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
